<resources>
    <string name="app_name">Nydrobionics</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirmation_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="sign_up_with">Sign Up with</string>
    <string name="sign_in_with">Sign In with</string>
    <string name="sign_in">Sign In</string>
    <string name="forget_password">Forget Password</string>
    <string name="email">Email</string>
    <string name="next">Next</string>
    <string name="remember_me">Remember me</string>
    <string name="don_t_have_an_account">Don\'t have an Account?</string>
    <string name="have_an_account">Have an Account?</string>
    <string name="provide_your_account_s_email_for_which_you_want_to_reset_your_password">Provide your account\'s email for which you want to reset your password!</string>
    <string name="new_password">New Password</string>
    <string name="create_new_password">Create \nnew password</string>
    <string name="your_identity_has_been_verified_nset_your_new_password">Your identity has been verified! \nSet your new password.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_photo_profile">User Photo Profile</string>
    <string name="add_photo">Add Photo</string>
    <string name="name">Name</string>
    <string name="bio">Bio</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="owner">Owner</string>
    <string name="staff">Staff</string>
    <string name="select_your_role">Select your role</string>
    <string name="role_description">Role Description</string>
    <string name="create">Create</string>
    <string name="staff_description">Staff is someone who works for the farm.</string>
    <string name="owner_description">Owner is someone who has the farm.</string>
    <string name="description">Description</string>
    <string name="farm_name">Farm Name</string>
    <string name="farm_description">Farm Description</string>
    <string name="farm_location">Farm Location</string>
    <string name="create_farm">Create Farm</string>
    <string name="create_profile">Create Profile</string>
    <string name="farm_id">Farm ID</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="farm_picture">Farm Picture</string>
    <string name="search">Search</string>
    <string name="username">Username</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone_number_ex">081212719895</string>
    <string name="address">Address</string>
    <string name="farm">Farm</string>
    <string name="sign_out">Sign Out</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="cancel">Cancel</string>
    <string name="sign_out_warning">Are you sure want to sign out?</string>
    <string name="joined_company_since">Joined company since %s</string>
    <string name="performance_rate">Performance Rate</string>
    <string name="role">Role</string>
    <string name="operational_area">Operational Area</string>
    <string name="save">Save</string>
    <string name="add_staff">Add Staff</string>
    <string name="forget_success">Check your email for a link to reset your password. If it doesn\'t appear within a few minutes, check your spam folder or</string>
    <string name="subtitle">Subtitle</string>
    <string name="title">Title</string>
    <string name="close">Close</string>
    <string name="posts">Posts</string>
    <string name="notes">Notes</string>
    <string name="social">Social</string>
    <string name="add">Add</string>
    <string name="what_would_you_like_to_do">What would you like to do?</string>
    <string name="add_recent_data_monitoring">Add recent data monitoring</string>
    <string name="add_new_crops_to_plant">Add new crops to plant</string>
    <string name="add_notes">Add note</string>
    <string name="edit_notes">Edit note</string>
    <string name="create_new_hydroponic_kit_to_farm">Create new hydroponic kit to farm</string>
    <string name="add_new_plant_to_nydrodb">Add new plant to NydroDB</string>
    <string name="hydroponic_kit">Hydroponic Kit</string>
    <string name="submit">Submit</string>
    <string name="temperature">Temperature (°C)</string>
    <string name="humidity">Humidity (RH)</string>
    <string name="water_level">Water Level (L)</string>
    <string name="nutrient_level">Nutrient Level (L)</string>
    <string name="turbidity">Turbidity (NTU)</string>
    <string name="kit_name">Hydroponic Kit Name</string>
    <string name="length">Length</string>
    <string name="width">Width</string>
    <string name="kit_size">Kit Size</string>
    <string name="minimum">Minimum</string>
    <string name="maximum">Maximum</string>
    <string name="kit_position_description">Kit Position Description</string>
    <string name="level_tooltip">"Used as an indicator in determining the tank fluid level "</string>
    <string name="create_new_kit">Create New Kit</string>
    <string name="plant_name">Plant Name</string>
    <string name="plant_description">Plant Description</string>
    <string name="growth_time">Growth Time (days)</string>
    <string name="add_new_plant">Add New Plant</string>
    <string name="edit_plant">Edit plant</string>
    <string name="or">OR</string>
    <string name="add_new_crops">Add New Crops</string>
    <string name="select_plant">Select Plant</string>
    <string name="estimated_harvest">Estimated Harvest</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="error_message">Error Message</string>
    <string name="error_illustration">Error Illustration</string>
    <string name="farm_staff">Farm Staff</string>
    <string name="version">Version</string>
    <string name="settings">Settings</string>
    <string name="history">History</string>
    <string name="acidity_level_ph">Acidity Level (pH)</string>
    <string name="temperature_only">Temperature</string>
    <string name="humidity_only">Humidity</string>
    <string name="acidity_only">Acidity Level</string>
    <string name="water_level_only">Water Level</string>
    <string name="nutrient_level_only">Nutrient Level</string>
    <string name="turbidity_only">Turbidity</string>
    <string name="last_condition">Last Condition</string>
    <string name="show_more">Show more</string>
    <string name="planted_crops">Planted Crops</string>
    <string name="data_monitoring">Data Monitoring</string>
    <string name="crops">Crops</string>
    <string name="planted_at">Planted at</string>
    <string name="can_be_harvested_at_s">Can be harvested at %s</string>
    <string name="d_more_days">%d more days</string>
    <string name="d_days">%d days</string>
    <string name="history_content">History Content</string>
    <string name="role_in_profile">%s of %s</string>
    <string name="discard">Discard</string>
    <string name="discard_change_warning">Changes will not be saved. Do you want to proceed?</string>
    <string name="discard_change">Discard Change</string>
    <string name="support">Support</string>
    <string name="about">About</string>
    <string name="feedback">Feedback</string>
    <string name="setting_language">Language Settings</string>
    <string name="my_post">My Post</string>
    <string name="general">General</string>
    <string name="did_you_like_nydrobionics">Did you like Nydrobionics?</string>
    <string name="let_us_know_what_you_think">Let us know what you think</string>
    <string name="awesome">Awesome!</string>
    <string name="feedback_edittext">Write your question or feedback here. We\'d love to hear from you</string>
    <string name="app_permission">App Permission</string>
    <string name="temp_value">%.2f °C</string>
    <string name="humid_value">%.2f\%% RH</string>
    <string name="year">Year</string>
    <string name="timestamp">timestamp</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="options">Options</string>
    <string name="post_from_plant">%1$s will ready to harvest in %2$d days with ideal condition :
        \n • Temperature : %3$.2f - %4$.2f °C
        \n • Humidity : %5$.2f - %6$.2f RH
        \n • pH : %7$.2f - %8$.2f</string>
    <string name="updated_on_s">Updated on %s</string>
    <string name="temperature_unit">°C</string>
    <string name="kit_example">20.02</string>
    <string name="kit_value">%.2f</string>
    <string name="previous">Previous</string>
    <string name="month">Month</string>
    <string name="created_by">Nydrobionics by Fernanda Daymara Hasna</string>
    <string name="photo_profile">Photo Profile</string>
    <string name="about_me">About Me</string>
    <string name="profile_description">
        As known as Nanda, I was born in Magelang on August 21, 1998. I am the first of three children who have completed education at Computer Engineering FTEIC Institut Teknologi Sepuluh Nopember Surabaya.
        I am interested in the field of digital technology, especially in the fields of IT Project Management, User-Oriented Product Development, and Design System Analysis. Currently, I am exploring Mobile Programming with Android Studio.
    </string>
    <string name="profile_name" translatable="false">Fernanda Daymara Hasna</string>
    <string name="tab" translatable="false">\t\t\t\t\t\t</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="biography">Biography</string>
    <string name="find_me">Find Me</string>
    <string name="credit">Credit</string>
    <string name="made_for">Made for Final Project
        \nMobile Application dan Technology
        \nInformation and Communication Technology
        \nBBPLK Bekasi 2021</string>
    <string name="project_source">Project Source</string>
    <string name="github">GitHub</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="icon_by_freepik">Icon by Freepik</string>
    <string name="splash_screen_animation">Splash Screen by Mvsaffa</string>
</resources>