<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/general"
        android:id="@+id/settings_general">
        <menu>
            <group>
                <item
                    android:id="@+id/drawer_edit"
                    android:title="@string/edit_profile"
                    android:icon="@drawable/ic_edit" />

                <item
                    android:id="@+id/drawer_my_post"
                    android:title="@string/my_post"
                    android:icon="@drawable/ic_social" />
            </group>
        </menu>
    </item>

    <item
        android:title="@string/support"
        android:id="@+id/drawers_support">
        <menu>
            <group>
                <item
                    android:id="@+id/drawer_language"
                    android:icon="@drawable/ic_language"
                    android:title="@string/setting_language" />
                <item
                    android:id="@+id/drawer_info"
                    android:icon="@drawable/ic_settings"
                    android:title="@string/app_permission" />
                <item
                    android:id="@+id/drawer_feedback"
                    android:icon="@drawable/ic_feedback"
                    android:title="@string/feedback" />
                <item
                    android:id="@+id/drawer_about"
                    android:icon="@drawable/ic_about"
                    android:title="@string/about" />
            </group>
        </menu>
    </item>

    <group android:id="@+id/drawers_signout">
        <item
            android:id="@+id/drawer_signout"
            android:title="@string/sign_out"
            android:icon="@drawable/ic_signout"/>
    </group>
</menu>