<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingVertical="12dp"
    android:paddingHorizontal="@dimen/layoutPadding"
    android:background="?attr/selectableItemBackground"
    android:id="@+id/postRoot">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/postUserImage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/user_photo_profile"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_farmer"
            app:shapeAppearanceOverlay="@style/circular_image"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_toStartOf="@id/postOptions"
            android:layout_toEndOf="@id/postUserImage"
            android:gravity="center">

            <TextView
                android:id="@+id/postUserEmail"
                style="?attr/textAppearanceSubtitle1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/email"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginHorizontal="12dp"
                android:layout_marginBottom="6dp" />

            <TextView
                android:id="@+id/postUserName"
                style="?attr/textAppearanceSubtitle1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/name"
                android:textSize="16sp"
                android:layout_marginHorizontal="12dp" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/postOptions"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/options"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_option" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/postImageContent"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_marginBottom="4dp"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/postDescription"
        style="?attr/textAppearanceSubtitle1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/description"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="4dp"
        android:lineSpacingExtra="4dp"/>

    <TextView
        android:id="@+id/postTimeStamp"
        style="?attr/textAppearanceSubtitle2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text="@string/timestamp"
        android:layout_marginBottom="4dp"
        android:lineSpacingExtra="4dp"
        android:maxLines="1"
        android:gravity="end"/>
</LinearLayout>