<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="10dp"
    android:background="?attr/selectableItemBackground"
    android:id="@+id/searchRoot"
    android:orientation="horizontal"
    android:divider="@drawable/divider_6dp"
    android:showDividers="middle"
    android:weightSum="2">

    <ImageView
        android:id="@+id/searchPicture"
        android:contentDescription="@string/photo_profile"
        android:src="@drawable/bg_farmer"
        style="@style/addImageStyle"
        tools:ignore="MissingConstraints"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.25"
        android:layout_alignParentStart="true"/>


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_weight="1.5"
        android:orientation="vertical"
        android:divider="@drawable/divider_3dp"
        android:showDividers="middle">

        <TextView
            android:id="@+id/searchTextSubtitle"
            style="?attr/textAppearanceSubtitle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:text="@string/subtitle"
            android:textSize="14sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/searchTextTitle"
            style="?attr/textAppearanceSubtitle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:text="@string/title"
            android:textSize="16sp"/>
    </LinearLayout>

    <ImageButton
        android:id="@+id/searchClose"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.25"
        android:src="@drawable/ic_close"
        android:background="?selectableItemBackground"
        android:contentDescription="@string/close" />
</LinearLayout>